--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
 project( APP )
 cmake_minimum_required( VERSION 2.6 )
 file( GLOB SRCS *.c *.cpp *.cc *.h *.hpp )
+set(CMAKE_EXE_LINKER_FLAGS "-static -pthread -lrt -ldl")
 add_executable( ${PROJECT_NAME} ${SRCS} )
