--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,22 +4,23 @@ add_definitions(-std=c++11)
 
 
 
+
+
 file( GLOB SRCS *.c *.cpp *.cc *.h *.hpp )
 set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++")
 add_executable( ${PROJECT_NAME} ${SRCS} )
-
+include_directories("spdlog/include")
 
 
 
 include(ExternalProject)
 set(SPDLOG_SRC_PATH "spdlog")
 ExternalProject_Add(spdlog
-    SOURCE_DIR ${CMAKE_HOME_DIRECTORY}/lib/spdlog
-    DOWNLOAD_DIR  ${CMAKE_HOME_DIRECTORY}/lib/dl
-    DOWNLOAD_NAME spdlog-0.16.2.tar.gz
-    URL https://github.com/gabime/spdlog/archive/v0.16.2.tar.gz
-    # URL http://video.trtos.com/v0.16.2.tar.gz
-    URL_HASH SHA1=4f2123e9d83dda8a94a6845c256a5858578046fc
+    SOURCE_DIR ${CMAKE_HOME_DIRECTORY}/spdlog
+    DOWNLOAD_DIR  ${CMAKE_HOME_DIRECTORY}/dl
+    DOWNLOAD_NAME spdlog-1.4.2.tar.gz
+    URL https://github.com/gabime/spdlog/archive/v1.4.2.tar.gz
+    URL_HASH SHA1=bad3caf7e4e1c2f299ccaaa8f56ff7edc0f36530
     CMAKE_ARGS -DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE} -DTOOLS_DIRECTORY=${TOOLS_DIRECTORY}
         -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS}
         -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
@@ -29,7 +30,7 @@ ExternalProject_Add(spdlog
 )
 
 
-include_directories("spdlog/include")
+
 
 
 
