--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ add_definitions(-std=c++11)
 
 file( GLOB SRCS *.c *.cpp *.cc *.h *.hpp )
 set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++")
+set(CMAKE_CXX_FLAGS "${CAMKE_CXX_FLAGS} -std=c++11 -pthread")
 add_executable( ${PROJECT_NAME} ${SRCS} )
 include_directories("spdlog/include")
 
