--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,19 @@ ExternalProject_Add(spdlog
         -DSPDLOG_BUILD_TESTING=OFF
 )
 
+include(ExternalProject)
+set(DLIB_SRC_PATH "dlib")
+ExternalProject_Add(dlib
+    SOURCE_DIR ${CMAKE_HOME_DIRECTORY}/dlib
+    GIT_REPOSITORY https://github.com/davisking/dlib.git
+    GIT_TAG 7f6746e7cdd0de3de261bd5c018a933612d325f0
+    CMAKE_ARGS -DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE} -DTOOLS_DIRECTORY=${TOOLS_DIRECTORY}
+        -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS}
+        -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
+        -DCMAKE_CONFIGURATION_TYPES=${CMAKE_CONFIGURATION_TYPES}
+        -DCMAKE_INSTALL_PREFIX=${INSTALL_DIR}
+        -DSPDLOG_BUILD_TESTING=OFF
+)
 
 
 
