--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,12 @@
 project( APP )
-cmake_minimum_required( VERSION 2.6 )
+cmake_minimum_required( VERSION 2.8 )
 add_definitions(-std=c++11)
 
 
 
 
 
-file( GLOB SRCS *.c *.cpp *.cc *.h *.hpp src/*)
+file( GLOB SRCS *.c *.cpp *.cc *.h *.hpp)
 set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++")
 set(CMAKE_CXX_FLAGS "${CAMKE_CXX_FLAGS} -std=c++11 -pthread")
 add_executable( ${PROJECT_NAME} ${SRCS} )
@@ -14,6 +14,9 @@ include_directories("spdlog/include")
 include_directories("dlib")
 
 
+find_package(dlib REQUIRED)
+include_directories(${DLIB_INCLUDE_DIRECTORY})
+target_link_libraries(APP  libdlib.a X11 pthread)
 
 include(ExternalProject)
 set(SPDLOG_SRC_PATH "spdlog")
