--- a/face_detection/CMakeLists.txt
+++ b/face_detection/CMakeLists.txt
@@ -1,4 +1,4 @@
-project( APP )
+project( face_dec )
 cmake_minimum_required( VERSION 2.8 )
 add_definitions(-std=c++11)
 
@@ -11,18 +11,21 @@ set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++")
 set(CMAKE_CXX_FLAGS "${CAMKE_CXX_FLAGS} -std=c++11 -pthread")
 add_executable( ${PROJECT_NAME} ${SRCS} )
 include_directories("spdlog/include")
+include_directories("dlib")
 
 
-add_subdirectory(face_detection)
+find_package(dlib REQUIRED)
+include_directories(${DLIB_INCLUDE_DIRECTORY})
+target_link_libraries(face_dec  libdlib.a X11 pthread)
+
+
 
 include(ExternalProject)
-set(SPDLOG_SRC_PATH "spdlog")
-ExternalProject_Add(spdlog
-    SOURCE_DIR ${CMAKE_HOME_DIRECTORY}/spdlog
-    DOWNLOAD_DIR  ${CMAKE_HOME_DIRECTORY}/dl
-    DOWNLOAD_NAME spdlog-1.4.2.tar.gz
-    URL https://github.com/gabime/spdlog/archive/v1.4.2.tar.gz
-    URL_HASH SHA1=bad3caf7e4e1c2f299ccaaa8f56ff7edc0f36530
+set(DLIB_SRC_PATH "dlib")
+ExternalProject_Add(dlib
+    SOURCE_DIR dlib
+    GIT_REPOSITORY https://github.com/davisking/dlib.git
+    GIT_TAG 7f6746e7cdd0de3de261bd5c018a933612d325f0
     CMAKE_ARGS -DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE} -DTOOLS_DIRECTORY=${TOOLS_DIRECTORY}
         -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS}
         -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
@@ -30,10 +33,6 @@ ExternalProject_Add(spdlog
         -DCMAKE_INSTALL_PREFIX=${INSTALL_DIR}
         -DSPDLOG_BUILD_TESTING=OFF
 )
-
-
-
-
 
 
 
