--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 project( APP )
 cmake_minimum_required( VERSION 2.8 )
 add_definitions(-std=c++11)
-
+add_subdirectory(face_detection)
 
 
 
@@ -13,7 +13,7 @@ add_executable( ${PROJECT_NAME} ${SRCS} )
 include_directories("spdlog/include")
 
 
-add_subdirectory(face_detection)
+
 
 include(ExternalProject)
 set(SPDLOG_SRC_PATH "spdlog")
@@ -33,6 +33,19 @@ ExternalProject_Add(spdlog
 
 
 
+include(ExternalProject)
+set(DLIB_SRC_PATH "dlib")
+ExternalProject_Add(dlib
+    SOURCE_DIR ${CMAKE_HOME_DIRECTORY}/dlib
+    GIT_REPOSITORY https://github.com/davisking/dlib.git
+    GIT_TAG 7f6746e7cdd0de3de261bd5c018a933612d325f0
+    CMAKE_ARGS -DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE} -DTOOLS_DIRECTORY=${TOOLS_DIRECTORY}
+        -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS}
+        -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
+        -DCMAKE_CONFIGURATION_TYPES=${CMAKE_CONFIGURATION_TYPES}
+        -DCMAKE_INSTALL_PREFIX=${INSTALL_DIR}
+        -DSPDLOG_BUILD_TESTING=OFF
+)
 
 
 
